# tots-planktoscope-analysis

./: .gitignore  README.md  pyproject.toml
autoprocessing/: tots-adjust-frames.sh  tots-clean.sh  tots-download-results.sh  tots-next-unprocessed-dataset.sh  tots-process-all.sh  tots-process-remotely.sh  tots-share-results.sh  tots-upload-frames.sh
changes/: tots-ps-acq-122.json  tots-ps-acq-13.json  tots-ps-acq-168.json  tots-ps-acq-171.json  tots-ps-acq-194.json  tots-ps-acq-209.json  tots-ps-acq-210.json  tots-ps-acq-228.json  tots-ps-acq-293.json  tots-ps-acq-320.json  tots-ps-acq-368.json  tots-ps-acq-371.json  tots-ps-acq-435.json  tots-ps-acq-476.json  tots-ps-acq-477.json  tots-ps-acq-491.json  tots-ps-acq-502.json  tots-ps-acq-568.json  tots-ps-acq-609.json  tots-ps-acq-610.json  tots-ps-acq-691.json  tots-ps-acq-694.json  tots-ps-acq-99.json
corrections/: tots-ps-acq-103.json  tots-ps-acq-122.json  tots-ps-acq-169.json  tots-ps-acq-172.json  tots-ps-acq-209.json  tots-ps-acq-210.json  tots-ps-acq-211.json  tots-ps-acq-228.json  tots-ps-acq-251.json  tots-ps-acq-285.json  tots-ps-acq-286.json  tots-ps-acq-368.json  tots-ps-acq-370.json  tots-ps-acq-435.json  tots-ps-acq-437.json  tots-ps-acq-438.json  tots-ps-acq-458.json  tots-ps-acq-476.json  tots-ps-acq-490.json  tots-ps-acq-491.json  tots-ps-acq-502.json  tots-ps-acq-567.json  tots-ps-acq-609.json  tots-ps-acq-610.json  tots-ps-acq-648.json  tots-ps-acq-649.json
dataset-lists/: uv-experiment.txt
ecotaxa/: archive.py  metadata.py
ecotaxa_export_metadata/: archives.py  cli.py  ecotaxa.py  results.py  (+1 more)
(+1652 files in other folders)
